[gd_scene load_steps=12 format=3 uid="uid://bcii3lc3s0ugh"]

[ext_resource type="Script" path="res://scripts/enemy/dynamite_drop.gd" id="1_q8s6r"]
[ext_resource type="PackedScene" uid="uid://byt03rernj7cq" path="res://scenes/enemy/drop.tscn" id="1_rauiw"]
[ext_resource type="Texture2D" uid="uid://274ie1nnbdaf" path="res://art/enemy/explosion.png" id="3_hrs3s"]
[ext_resource type="Texture2D" uid="uid://yd8oda208dfq" path="res://art/enemy/dynamite.png" id="3_j8c31"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0w7mr"]
atlas = ExtResource("3_hrs3s")
region = Rect2(0, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa6t1"]
atlas = ExtResource("3_j8c31")
region = Rect2(0, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqivc"]
atlas = ExtResource("3_j8c31")
region = Rect2(144, 0, 144, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmn5w"]
atlas = ExtResource("3_j8c31")
region = Rect2(288, 0, 144, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_kihmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w7mr")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa6t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqivc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmn5w")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7yegr"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kef7d"]
radius = 32.0156

[node name="dynamite_drop" type="Node2D"]
script = ExtResource("1_q8s6r")

[node name="drop_component" parent="." instance=ExtResource("1_rauiw")]
timer_length = 5
fall_speed = 50
rotation_speed = 0.25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_kihmo")
animation = &"idle"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, -15)
shape = SubResource("CapsuleShape2D_7yegr")

[node name="explosion_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion_hitbox"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_kef7d")
disabled = true
debug_color = Color(0.976379, 0.153833, 0, 0.42)

[connection signal="body_entered" from="explosion_hitbox" to="." method="_on_explosion_hitbox_body_entered"]
